examples/errors/10_invalid_argument_type/layout.tml
#use <definitions.tmd>

<Window>
    <Text value="Hello, World!" font_size=14 wrap=100%/>
</Window>